--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "react-apexcharts": "^1.3.7",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-lazylog": "^4.5.2",
     "react-loader-spinner": "^3.1.14",
     "react-popper": "^2.2.3",
     "react-promise-tracker": "^2.1.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
