--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "ace-builds": "^1.4.11",
     "apexcharts": "^3.19.2",
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "browserify-fs": "^1.0.0",
     "codemirror": "^5.54.0",
+    "connect": "^3.7.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-csp-header": "^4.0.0",
     "mdbreact": "^4.27.0",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.4",
     "react": "^16.13.1",
+    "react-ace": "^9.0.0",
     "react-apexcharts": "^1.3.7",
     "react-bootstrap": "^1.0.1",
-    "react-codemirror2": "^7.2.1",
     "react-dom": "^16.13.1",
     "react-lazylog": "^4.5.2",
     "react-loader-spinner": "^3.1.14",
@@ -25,11 +34,12 @@
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
+    "start-server": "npx nodemon server.js",
     "start-api": "cd api && python3 api.py --no-debugger",
     "start-all": "npm run start & (cd api && python api.py --no-debugger) ",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -50,6 +60,7 @@
   "devDependencies": {
     "datatables.net": "^1.10.21",
     "http-proxy-middleware": "^1.0.4",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "react-app-rewired": "^2.1.6"
   }
 }
