--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-csp-header": "^4.0.0",
+    "express-pino-logger": "^5.0.0",
     "mdbreact": "^4.27.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
+    "pino": "^6.3.2",
     "react": "^16.13.1",
     "react-ace": "^9.0.0",
     "react-apexcharts": "^1.3.7",
