--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-apexcharts": "^1.3.7",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-full-screen": "^0.2.4",
     "react-lazylog": "^4.5.2",
     "react-loader-spinner": "^3.1.14",
     "react-popper": "^2.2.3",
