--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-ace": "^9.0.0",
     "react-apexcharts": "^1.3.7",
     "react-bootstrap": "^1.0.1",
+    "react-csv": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-full-screen": "^0.2.4",
     "react-lazylog": "^4.5.2",
