--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -25,9 +26,11 @@
     "react-ace": "^9.0.0",
     "react-apexcharts": "^1.3.7",
     "react-bootstrap": "^1.0.1",
+    "react-countdown": "^2.2.1",
     "react-csv": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-full-screen": "^0.2.4",
+    "react-idle-timer": "^4.2.12",
     "react-lazylog": "^4.5.2",
     "react-loader-spinner": "^3.1.14",
     "react-popper": "^2.2.3",
@@ -40,7 +43,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "start-server": "npx nodemon server.js",
-    "start-api": "cd api && python3 api.py --no-debugger",
+    "start-api": "python3 /home/cyberdevnet/mer-hacker-dev/api/api.py",
     "start-all": "npm run start & (cd api && python api.py --no-debugger) ",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
