Added routes and basicAuth

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "browserify-fs": "^1.0.0",
     "codemirror": "^5.54.0",
     "connect": "^3.7.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-basic-auth": "^1.2.0",
     "express-csp-header": "^4.0.0",
     "express-pino-logger": "^5.0.0",
     "mdbreact": "^4.27.0",
