--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ace-builds": "^1.4.11",
     "apexcharts": "^3.19.2",
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "browserify-fs": "^1.0.0",
     "codemirror": "^5.54.0",
