--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-csp-header": "^4.0.0",
     "express-pino-logger": "^5.0.0",
     "mdbreact": "^4.27.0",
+    "mongoose": "^5.9.21",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "pino": "^6.3.2",
