--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-basic-auth": "^1.2.0",
     "express-csp-header": "^4.0.0",
     "express-pino-logger": "^5.0.0",
+    "kill-port": "^1.6.0",
     "mdbreact": "^4.27.0",
     "mongoose": "^5.9.21",
     "multer": "^1.4.2",
@@ -43,6 +44,7 @@
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
     "reactstrap": "^8.4.1",
+    "semantic-ui-react": "^0.88.2",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
