--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
     "express-csp-header": "^4.0.0",
+    "express-fileupload": "^1.1.7-alpha.4",
     "express-pino-logger": "^5.0.0",
     "kill-port": "^1.6.0",
     "mdbreact": "^4.27.0",
     "mongoose": "^5.9.21",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "pino": "^6.3.2",
@@ -36,6 +38,7 @@
     "react-csv": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-full-screen": "^0.2.4",
+    "react-hook-form": "^6.0.7",
     "react-idle-timer": "^4.2.12",
     "react-lazylog": "^4.5.2",
     "react-loader-spinner": "^3.1.14",
@@ -44,8 +47,10 @@
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
     "reactstrap": "^8.4.1",
+    "rsuite": "^4.8.0",
     "semantic-ui-react": "^0.88.2",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "uuid": "^8.2.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
