--- a/package.json
+++ b/package.json
@@ -46,11 +46,14 @@
     "react-promise-tracker": "^2.1.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
+    "react-tooltip": "^4.2.7",
     "reactstrap": "^8.4.1",
     "rsuite": "^4.8.0",
     "semantic-ui-react": "^0.88.2",
     "socket.io-client": "^2.3.0",
-    "uuid": "^8.2.0"
+    "uuid": "^8.2.0",
+    "victory": "^35.0.5",
+    "victory-chart": "^35.0.5"
   },
   "scripts": {
     "start": "react-app-rewired start",
