--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "connect": "^3.7.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "d3": "^5.16.0",
+    "d3-drag": "^1.2.5",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
     "express-csp-header": "^4.0.0",
@@ -36,6 +38,7 @@
     "react-bootstrap": "^1.0.1",
     "react-countdown": "^2.2.1",
     "react-csv": "^2.0.3",
+    "react-d3-graph": "^2.5.0",
     "react-dom": "^16.13.1",
     "react-full-screen": "^0.2.4",
     "react-hook-form": "^6.0.7",
