--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
     "react-tooltip": "^4.2.7",
+    "react-tree-graph": "^5.1.0",
     "reactstrap": "^8.4.1",
     "rsuite": "^4.8.0",
     "semantic-ui-react": "^0.88.2",
