fix some issues

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-countdown": "^2.2.1",
     "react-csv": "^2.0.3",
     "react-d3-graph": "^2.5.0",
+    "react-d3-tree": "^1.16.1",
     "react-dom": "^16.13.1",
     "react-full-screen": "^0.2.4",
     "react-hook-form": "^6.0.7",
