--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-ace": "^9.0.0",
     "react-apexcharts": "^1.3.7",
     "react-bootstrap": "^1.0.1",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-editor": "^1.4.0",
     "react-countdown": "^2.2.1",
     "react-csv": "^2.0.3",
     "react-d3-graph": "^2.5.0",
