--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-editor": "^1.4.0",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-countdown": "^2.2.1",
     "react-csv": "^2.0.3",
     "react-d3-graph": "^2.5.0",
