--- a/package.json
+++ b/package.json
@@ -68,8 +68,8 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "start-server": "npx nodemon server.js",
-    "start-api": "python3 /home/cyberdevnet/mer-hacker-dev/api/api.py",
+    "start-server": "cd node && npx nodemon server.js",
+    "start-api": "cd flask && python3 api.py",
     "start-all": "npm run start & (cd api && python api.py --no-debugger) ",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
