--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ meraki_restore_organization.py
 flask/logs/debug_file.log
 flask/logs/log_file.log
 .vscode-profile
+.gitignore
+.yarn.lock
+*.cpuprofile
+*.vscode
