--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "browserify-fs": "^1.0.0",
     "codemirror": "^5.54.0",
     "connect": "^3.7.0",
+    "connect-redis": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "cryptr": "^6.0.2",
     "d3": "^5.16.0",
     "d3-drag": "^1.2.5",
     "express": "^4.17.1",
@@ -27,6 +29,7 @@
     "express-csp-header": "^4.0.0",
     "express-fileupload": "^1.1.7-alpha.4",
     "express-pino-logger": "^5.0.0",
+    "express-session": "^1.17.1",
     "kill-port": "^1.6.0",
     "mdbreact": "^4.27.0",
     "mongoose": "^5.9.21",
@@ -60,6 +63,7 @@
     "react-tooltip": "^4.2.7",
     "react-tree-graph": "^5.1.0",
     "reactstrap": "^8.4.1",
+    "redis": "^3.0.2",
     "rsuite": "^4.8.0",
     "semantic-ui-react": "^0.88.2",
     "socket.io-client": "^2.3.0",
