--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "browserify-fs": "^1.0.0",
     "codemirror": "^5.54.0",
     "connect": "^3.7.0",
+    "connect-mongo": "^3.2.0",
     "connect-redis": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
