--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-session": "^1.17.1",
     "kill-port": "^1.6.0",
     "mdbreact": "^4.27.0",
+    "mongodb": "^3.6.2",
     "mongoose": "^5.9.21",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
