finalising session storage to mongo

--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "codemirror": "^5.54.0",
     "connect": "^3.7.0",
     "connect-mongo": "^3.2.0",
-    "connect-redis": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cryptr": "^6.0.2",
@@ -35,7 +34,6 @@
     "mdbreact": "^4.27.0",
     "mongodb": "^3.6.2",
     "mongoose": "^5.9.21",
-    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "pino": "^6.3.2",
@@ -69,7 +67,7 @@
     "rsuite": "^4.8.0",
     "semantic-ui-react": "^0.88.2",
     "socket.io-client": "^2.3.0",
-    "uuid": "^8.2.0",
+    "supertest": "^5.0.0",
     "victory": "^35.0.5",
     "victory-chart": "^35.0.5"
   },
