multi_user implementation

--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "cryptr": "^6.0.2",
     "d3": "^5.16.0",
     "d3-drag": "^1.2.5",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
     "express-csp-header": "^4.0.0",
     "express-fileupload": "^1.1.7-alpha.4",
     "express-pino-logger": "^5.0.0",
     "express-session": "^1.17.1",
+    "file-type": "^15.0.1",
+    "form-data": "^3.0.0",
+    "gridfs-stream": "^1.1.1",
     "kill-port": "^1.6.0",
     "mdbreact": "^4.27.0",
     "mongodb": "^3.6.2",
@@ -67,6 +71,7 @@
     "rsuite": "^4.8.0",
     "semantic-ui-react": "^0.88.2",
     "socket.io-client": "^2.3.0",
+    "stream": "0.0.2",
     "supertest": "^5.0.0",
     "victory": "^35.0.5",
     "victory-chart": "^35.0.5"
