--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "socket.io-client": "^2.3.0",
     "stream": "0.0.2",
     "supertest": "^5.0.0",
+    "text-security": "^3.1.1",
     "victory": "^35.0.5",
     "victory-chart": "^35.0.5"
   },
