--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.6.2
 appdirs==1.4.4
 astroid==2.3.3
 async-timeout==3.0.1
+asyncio==3.4.3
 atomicwrites==1.3.0
 attrs==19.3.0
 autopep8==1.5.3
@@ -16,6 +17,7 @@ colorama==0.4.3
 crayons==0.3.0
 cryptography==2.8
 ctypes-callable==1.0.0
+cursor==1.3.4
 DateTime==4.3
 distlib==0.3.0
 dnacentersdk==1.3.0.post6
@@ -39,11 +41,13 @@ flatten-dict==0.2.0
 flatten-json==0.1.7
 furl==2.1.0
 future==0.18.2
+fuzzyfinder==2.1.0
 genie.libs.parser==20.2.1b4
 gevent==20.6.2
 gevent-websocket==0.10.1
 greenlet==0.4.16
 gunicorn==20.0.4
+halo==0.0.29
 idna==2.9
 isort==4.3.21
 itsdangerous==1.1.0
@@ -54,17 +58,22 @@ jsonpickle==0.9.6
 jsonschema==3.2.0
 jwt==0.6.1
 lazy-object-proxy==1.4.3
+log-symbols==0.0.14
 lxml==4.5.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
 meraki==1.0.0b8
 meraki-sdk==1.5.0
+mongopy==0.1
 monotonic==1.5
 more-itertools==8.1.0
 msgpack==1.0.0
 multidict==4.7.6
+mysqlclient==1.4.6
 ncclient==0.6.7
+netifaces==0.10.4
 netmiko==3.0.0
+nose==1.3.7
 orderedmultidict==1.0.1
 packaging==20.1
 paramiko==2.7.1
@@ -74,6 +83,7 @@ pipenv==2020.6.2
 pluggy==0.13.1
 ply==3.11
 prettytable==0.7.2
+prompt-toolkit==3.0.5
 PTable==0.9.2
 py==1.8.1
 pyang==2.1.1
@@ -83,8 +93,10 @@ pycodestyle==2.6.0
 pycparser==2.19
 pycryptodomex==3.9.6
 pyflakes==2.1.1
+Pygments==2.6.1
 PyJWT==1.7.1
 pylint==2.4.4
+pymongo==3.11.0
 PyNaCl==1.3.0
 pyparsing==2.4.6
 pyrsistent==0.16.0
@@ -105,16 +117,23 @@ requests==2.23.0
 requests-toolbelt==0.9.1
 scp==0.13.2
 six==1.14.0
+socket-cli==0.1.7
+spinners==0.0.24
 SQLAlchemy==1.3.13
 tabulate==0.8.6
+termcolor==1.1.0
 textfsm==1.1.0
 toml==0.10.1
+ttp==0.3.0
+ufw==0.36
+ujson==1.35
 urllib3==1.25.8
 virlutils==0.8.8
 virtualenv==20.0.21
 virtualenv-clone==0.5.4
 wcwidth==0.1.8
 webexteamssdk==1.2
+websockets==8.1
 Werkzeug==1.0.0
 wrapt==1.11.2
 WTForms==2.2.1
