--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
-    "@material-ui/core": "^4.10.2",
+    "@material-ui/core": "^3.2.0",
     "@rjsf/core": "^2.2.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "ace-builds": "^1.4.12",
+    "activedirectory": "^0.7.2",
     "apexcharts": "^3.20.0",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
+    "bl": "^4.0.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "browserify-fs": "^1.0.0",
@@ -34,6 +36,7 @@
     "file-type": "^15.0.1",
     "form-data": "^3.0.0",
     "gridfs-stream": "^1.1.1",
+    "jss": "^9.8.7",
     "kill-port": "^1.6.0",
     "mdbreact": "^4.27.0",
     "mongodb": "^3.6.2",
@@ -62,7 +65,7 @@
     "react-loader-spinner": "^3.1.14",
     "react-popper": "^2.2.3",
     "react-promise-tracker": "^2.1.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-select": "^3.1.0",
     "react-tooltip": "^4.2.7",
     "react-tree-graph": "^5.1.0",
