--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
-    "@material-ui/core": "^3.2.0",
+    "@material-ui/core": "^3.9.4",
+    "@material-ui/icons": "^4.9.1",
     "@rjsf/core": "^2.2.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -38,6 +39,7 @@
     "gridfs-stream": "^1.1.1",
     "jss": "^9.8.7",
     "kill-port": "^1.6.0",
+    "material-icons": "^0.3.1",
     "mdbreact": "^4.27.0",
     "mongodb": "^3.6.2",
     "mongoose": "^5.9.21",
