--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-bootstrap-table2-editor": "^1.4.0",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
+    "react-content-loader": "^5.1.2",
     "react-countdown": "^2.2.1",
     "react-csv": "^2.0.3",
     "react-d3-graph": "^2.5.0",
@@ -65,6 +66,7 @@
     "react-idle-timer": "^4.3.6",
     "react-lazylog": "^4.5.2",
     "react-loader-spinner": "^3.1.14",
+    "react-loading-skeleton": "^2.1.1",
     "react-popper": "^2.2.3",
     "react-promise-tracker": "^2.1.0",
     "react-scripts": "^3.4.3",
