--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mongodb": "^3.6.2",
     "mongoose": "^5.9.21",
     "multer": "^1.4.2",
+    "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "pino": "^6.3.2",
     "react": "^16.13.1",
