--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
-    "@material-ui/core": "^3.9.4",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
     "@rjsf/core": "^2.2.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -72,6 +73,7 @@
     "react-promise-tracker": "^2.1.0",
     "react-scripts": "^3.4.3",
     "react-select": "^3.1.0",
+    "react-stepzilla": "^6.0.2",
     "react-tooltip": "^4.2.7",
     "react-tree-graph": "^5.1.0",
     "reactstrap": "^8.4.1",
