--- a/package.json
+++ b/package.json
@@ -3,48 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.14.0",
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
     "@rjsf/core": "^2.2.2",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "ace-builds": "^1.4.12",
-    "activedirectory": "^0.7.2",
     "apexcharts": "^3.20.0",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "bl": "^4.0.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
-    "browserify-fs": "^1.0.0",
     "codemirror": "^5.54.0",
-    "connect": "^3.7.0",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "cryptr": "^6.0.2",
     "d3": "^5.16.0",
     "d3-drag": "^1.2.5",
-    "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "express-basic-auth": "^1.2.0",
-    "express-csp-header": "^4.0.0",
     "express-fileupload": "^1.1.7-alpha.4",
     "express-pino-logger": "^5.0.0",
     "express-session": "^1.17.1",
-    "file-type": "^15.0.1",
-    "form-data": "^3.0.0",
-    "gridfs-stream": "^1.1.1",
-    "jss": "^9.8.7",
-    "kill-port": "^1.6.0",
+    "levelup": "^4.4.0",
     "material-icons": "^0.3.1",
-    "mdbreact": "^4.27.0",
-    "mongodb": "^3.6.2",
     "mongoose": "^5.9.21",
-    "multer": "^1.4.2",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "pino": "^6.3.2",
@@ -57,41 +40,32 @@
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-content-loader": "^5.1.2",
-    "react-countdown": "^2.2.1",
     "react-csv": "^2.0.3",
     "react-d3-graph": "^2.5.0",
     "react-d3-tree": "^1.16.1",
     "react-dom": "^16.13.1",
-    "react-dropdown-select": "^4.4.2",
-    "react-full-screen": "^0.2.4",
     "react-hook-form": "^6.9.0",
-    "react-idle-timer": "^4.3.6",
     "react-lazylog": "^4.5.2",
-    "react-loader-spinner": "^3.1.14",
-    "react-loading-skeleton": "^2.1.1",
-    "react-popper": "^2.2.3",
-    "react-promise-tracker": "^2.1.0",
+    "react-modal": "^3.11.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-select": "^3.1.0",
-    "react-stepzilla": "^6.0.2",
     "react-tooltip": "^4.2.7",
     "react-tree-graph": "^5.1.0",
-    "reactstrap": "^8.4.1",
-    "redis": "^3.0.2",
-    "rsuite": "^4.8.0",
-    "semantic-ui-react": "^0.88.2",
-    "socket.io-client": "^2.3.0",
     "stream": "0.0.2",
-    "supertest": "^5.0.0",
     "victory": "^35.0.5",
-    "victory-chart": "^35.0.5"
+    "victory-chart": "^35.0.5",
+    "jquery": "^3.5.1",
+    "react-app-rewired": "^2.1.6"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "start-server": "cd node && npx nodemon server.js",
-    "start-api": "cd flask && python3 api.py",
-    "start-all": "npm run start & (cd api && python api.py --no-debugger) ",
-    "build": "GENERATE_SOURCEMAP=false react-app-rewired build",
+    "start-api": "cd flask && python api.py",
+    "start-venv": "cd venv/Scripts/ & activate",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "build-rewired": "GENERATE_SOURCEMAP=false react-app-rewired build",
+    "winBuild": "set \"GENERATE_SOURCEMAP=false\" && react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
