--- a/k8s/Dockerfile_Backend_Flask
+++ b/k8s/Dockerfile_Backend_Flask
@@ -3,7 +3,7 @@ FROM python:3.7-slim as build-stage
 
 ADD ./flask/requirements.txt /tmp/requirements.txt
 
-RUN pip install -r /tmp/requirements.txt
+RUN pip install -r /tmp/requirements.txt 
 
 #Stage 1, Distroless Image
 FROM gcr.io/distroless/python3-debian10:nonroot
@@ -14,9 +14,10 @@ ADD ./flask /flask
 ADD ./misc/gunicorn /usr/local/bin/gunicorn
 ADD ./misc/gunicorn_config.py /gunicorn_config.py
 
+
 #WORKDIR /flask
 ENV LC_ALL C.UTF-8
-ENV PYTHONPATH="/usr/local/lib/python3.7/site-packages:/api"
+ENV PYTHONPATH="/usr/local/lib/python3.7/site-packages:/flask"
 ENV PATH="/usr/local/bin/:$PATH"
 ENV GUNICORN_BIND="0.0.0.0:5000"
 ENV GUNICORN_WORKERS="4"
