--- a/k8s/deployment_frontend.yaml
+++ b/k8s/deployment_frontend.yaml
@@ -3,10 +3,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend
-  namespace: jerry
+  namespace: mer-hacker
 spec:
   selector:
-    app: jerry
+    app: mer-hacker
     tier: frontend
   ports:
     - protocol: "TCP"
@@ -17,17 +17,18 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: frontend-nginx-cg
-  namespace: jerry
+  namespace: mer-hacker
 data:
-  jerry.conf: |
+  mer-hacker.conf: |
     server {
       listen 80;
-      server_name jerry.nts.at;
+      server_name mer-hacker.nts.at;
+      root /usr/share/nginx/mer-hacker/build;
+      index index.html index.htm;
     
       location / {
-        root /usr/share/nginx/jerry/build;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html =404;
+        try_files $uri /index.html;
+        error_page  405     =200 $uri;
       }
 
       location /flask {
@@ -38,21 +39,32 @@ data:
             proxy_set_header X-Forwarded-Proto  $scheme;
             proxy_read_timeout          3m;
             proxy_connect_timeout       3m;
-            proxy_pass http://rqb:5000;
+            proxy_pass http://flask:5000;
+      }
+      
+      location /node {
+            proxy_redirect                      off;
+            proxy_set_header Host               $host;
+            proxy_set_header X-Real-IP          $remote_addr;
+            proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto  $scheme;
+            proxy_read_timeout          3m;
+            proxy_connect_timeout       3m;
+            proxy_pass http://node:3001;
       }
     }
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: jerry-frontend
-  namespace: jerry
+  name: mer-hacker-frontend
+  namespace: mer-hacker
 spec:
   minReadySeconds: 10
   replicas: 3
   selector:
     matchLabels:
-      app: jerry
+      app: mer-hacker
       tier: frontend
       track: stable
   strategy:
@@ -63,24 +75,13 @@ spec:
   template:
     metadata:
       labels:
-        app: jerry
+        app: mer-hacker
         tier: frontend
         track: stable
     spec:
       containers:
-        - name: jerry-sidecar
-          image: docker.soc.artifacts.nts.at/jerry:latest
-          imagePullPolicy: Always
-          command: ["/bin/sh", "-c", "tail -f /dev/null"]
-          lifecycle:
-            postStart:
-              exec:
-                command: ["/bin/sh","-c", "cp -a /deploy/jerry /jerry-app/ && exit 0"]
-          volumeMounts:
-            - name: jerry-app
-              mountPath: /jerry-app
-        - name: jerry-frontend
-          image: repo.nts.eu:8083/repository/nts_docker_repo/nts-nginx-distroless:1.18.0
+        - name: mer-hacker-frontend
+          image: kyos0109/nginx-distroless:1.18.0
           imagePullPolicy: Always
           ports:
             - containerPort: 80
@@ -98,7 +99,7 @@ spec:
               scheme: HTTP
               httpHeaders:
               - name: Host
-                value: jerry.nts.at
+                value: mer-hacker.nts.at
             initialDelaySeconds: 10
             timeoutSeconds: 1
             periodSeconds: 10
@@ -109,23 +110,20 @@ spec:
               scheme: HTTP
               httpHeaders:
               - name: Host
-                value: jerry.nts.at
+                value: mer-hacker.nts.at
             initialDelaySeconds: 15
             timeoutSeconds: 20
           volumeMounts:
             - name: nginx-config
               mountPath: /etc/nginx/sites-enabled/
-            - name: jerry-app
+            - name: mer-hacker-app
               mountPath: /usr/share/nginx
-      imagePullSecrets:
-        - name: nts-ext-repo
-        - name: nts-artifacts-soc
       volumes:
-        - name: jerry-app
+        - name: mer-hacker-app
           emptyDir: {}
         - name: nginx-config
           configMap:
             name: frontend-nginx-cg
             items:
-              - key: jerry.conf
+              - key: mer-hacker.conf
                 path: keys
