--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express-fileupload": "^1.1.7-alpha.4",
     "express-pino-logger": "^5.0.0",
     "express-session": "^1.17.1",
+    "jquery": "^3.5.1",
+    "js-cookie": "^2.2.1",
     "levelup": "^4.4.0",
     "material-icons": "^0.3.1",
     "mongoose": "^5.9.21",
@@ -34,6 +36,7 @@
     "react": "^16.13.1",
     "react-ace": "^9.0.0",
     "react-apexcharts": "^1.3.7",
+    "react-app-rewired": "^2.1.6",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-editor": "^1.4.0",
@@ -52,11 +55,10 @@
     "react-select": "^3.1.0",
     "react-tooltip": "^4.2.7",
     "react-tree-graph": "^5.1.0",
+    "react-user-avatar": "^1.10.0",
     "stream": "0.0.2",
     "victory": "^35.0.5",
-    "victory-chart": "^35.0.5",
-    "jquery": "^3.5.1",
-    "react-app-rewired": "^2.1.6"
+    "victory-chart": "^35.0.5"
   },
   "scripts": {
     "start": "react-app-rewired start",
