--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -16,7 +16,7 @@ MarkupSafe==1.1.1
 meraki==1.3.0
 meraki-sdk==1.5.0
 msgpack==1.0.0
-multidict==5.0.2
+multidict
 python-dateutil==2.8.1
 python-engineio==3.13.2
 python-socketio==4.6.0
@@ -26,7 +26,8 @@ ttp==0.5.0
 typing-extensions==3.7.4.3
 urllib3==1.26.2
 Werkzeug==1.0.1
-yarl==1.6.0
+yarl 
 gunicorn==20.0.4
 pymongo==3.11.1
 python-dotenv==0.15.0
+cryptography
