--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mer-hacker",
   "version": "0.1.0",
   "private": true,
+  "config-overrides-path": "node_modules/react-app-rewired/config-overrides.js",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@material-ui/core": "^4.11.0",
